# CloudTracerHub-Agent

./: README.md  main.py  mcp_main.py  pyproject.toml  使用说明.md
docs/: Agent.md  使用说明.md
examples/: lubster.config.json
examples/incidents/: unified_auth_timeout.json
examples/video_demo/: README.md  lubster.video.config.json
examples/video_demo/incidents/: 01_checkout_redis_timeout.json  01_course_selection_timeout.json  02_gov_service_signature_failure.json  02_payment_signature_failure.json  03_grade_query_backlog.json  03_recommendation_backlog.json
lubster/: README.md  cli.py  config.py  diagnosis.py  mcp_main.py  mcp_server.py
lubster/tests/: test_lubster_flow.py  test_mcp_server.py
lubster_base_config/: IDENTITY.md  identity.yml  personal.yml  workflow.yml
tests/: test_cli_exit_code.py  test_lubster_flow.py  test_mcp_usability.py
