[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lubster-agent"
version = "0.1.0"
description = "lubster CLI and MCP server for cloud-native incident diagnosis"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
lubster = "lubster.cli:run"
lubster-agent = "lubster.cli:run"
lubster-mcp = "lubster.mcp_main:main"
lubster-agent-mcp = "lubster.mcp_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
lubster = ["*.json"]

[tool.setuptools.packages.find]
include = ["lubster*"]
